--- a/package.json
+++ b/package.json
@@ -88,10 +88,12 @@
     "url-loader": "0.6.2",
     "vue-hot-reload-api": "2.3.0",
     "vue-html-loader": "1.2.4",
+    "vue-jest": "2.6.0",
     "vue-loader": "14.2.2",
     "vue-style-loader": "3.1.2",
     "vue-template-compiler": "2.5.16",
     "vue-template-es2015-compiler": "1.6.0",
+    "wallaby-vue-compiler": "1.0.3",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.2",
     "webpack-merge": "0.20.0",
